welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: type mismatch;
 found   : Unit
 required: Boolean
			avance()
                              ^Program:6: error: type mismatch;
 found   : Unit
 required: Boolean
		if(vuBiscuit)
                ^