welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
val vuBiscuit=false

	def haveBaggle():Boolean =
	{
		if(vuBiscuit)
		{
			avance()
		}
	}
